kubernetes/system/argocd/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: argocd-route
spec:
  parentRefs:
    - name: default-gateway
      namespace: default
  hostnames:
    - argocd.ninebasetwo.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: argocd-server
          port: 443
