kubernetes/system/argocd/base/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: httproute-external-argocd
  namespace: argocd
spec:
  parentRefs:
  - name: external-gateway
    namespace: kube-system
  hostnames:
    - "argocd.ninebasetwo.net"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: argocd-server
      port: 443

---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-nginx-argocd
  namespace: argocd
spec:
  parentRefs:
  - name: internal-gateway
    namespace: kube-system
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: argocd-server
      port: 443
